# local-mcp-ssh

./: README.md  index.js  mcp_ssh_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt
