[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ssh-server"
version = "1.0.0"
description = "MCP SSH Server - Control remote servers via natural language through Claude Desktop or Cursor IDE"
authors = [
    {name = "Mert Can Karaoğlu", email = "mertcankaraoglu@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
mcp-ssh-server = "mcp_ssh_server:main"

[project.urls]
Homepage = "https://github.com/mertcankaraoglu/local-mcp-ssh"
Repository = "https://github.com/mertcankaraoglu/local-mcp-ssh"
Issues = "https://github.com/mertcankaraoglu/local-mcp-ssh/issues"

[tool.setuptools]
py-modules = ["mcp_ssh_server"]
